multiple-select.css
/**
 * @author zhixin wen <wenzhixin2010@gmail.com>
 */

.ms-parent {
	display: inline-block;
	position: relative;
	vertical-align: middle;
}

.ms-choice {
	display: block;
	height: 26px;
	padding: 0 0 0 8px;
	overflow: hidden;
	position: relative;
	cursor: pointer;
	border: 1px solid #aaa;
	white-space: nowrap;
	line-height: 26px;
	color: #444;
	text-decoration: none;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	background-color: #fff;
}

.ms-choice.disabled {
	background-color: #f4f4f4;
	background-image: none;
	border: 1px solid #ddd;
	cursor: default;
}

.ms-choice > span {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	display: block;
	float: left;
}

.ms-choice > span.placeholder {
	color: #999;
}

.ms-choice > div {
	float: right;
	width: 20px;
	height: 25px;
	background: url('multiple-select.png') right top no-repeat;
}

.ms-choice > div.open {
	background: url('multiple-select.png') left top no-repeat;
}

.ms-drop {
	max-height: 250px;
	overflow: auto;
	display: none;
	margin-top: -1px;
	padding: 0 0 0 8px;
	position: absolute;
	z-index: 1000;
	top: 100%;
	background: #fff;
	color: #000;
	border: 1px solid #aaa;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
	-moz-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
	box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
}

.ms-drop ul {
	margin: 0;
	padding: 5px 0;
}

.ms-drop ul > li {
	clear: both;
	list-style: none;
	display: list-item;
	background-image: none;
	position: static;
}

.ms-drop ul > li .disabled {
	opacity: .35;
	filter: Alpha(Opacity=35);
}

.ms-drop ul > li.multiple {
	display: block;
	float: left;
}

.ms-drop ul > li.multiple label {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.ms-drop ul > li label.optgroup {
	font-weight: bold;
}

.ms-drop input[type="checkbox"] {
	float: left;
	margin-right: 5px;
}

